--- a/webpages/signup/local-css/signup.css
+++ b/webpages/signup/local-css/signup.css
@@ -25,7 +25,7 @@
   }
 
   .signUpForm .submitSignUp {
-    background-color: #000000;
+    background-color: #000000 !important;
     color: white;
     padding: 16px 20px;
     border: none;
